# train

./: .gitignore  YOLOv8n.py  carsConfig.py  dataset.py  ocrConfig.py  pyproject.toml  train.py  utils.py
cnn/: activations.py  core.py  loss.py  metrics.py  schedulers.py  utils.py
datasets/cars/: data.yaml
datasets/cars/test/labels/: 00024_jpg.rf.048b878f42e79cd51a8e93e8839707f4.txt  00028_jpg.rf.0af8635ef23ce4280b285413f50fccb1.txt  00142_jpg.rf.48cf51b16143816545008df9f153ca74.txt  00188_jpg.rf.9193385fd22b99b829bceebf2f8f709c.txt  00357_jpg.rf.9e53cffc76ab650ea92521384a611836.txt  car1002_png.rf.4e4078f965e5e855d651c050e9e4d9ac.txt  car1019_png.rf.43052b7a78db5082e86a5004be76681a.txt  car1021_png.rf.8fcece805e3766f3e23638c40ccfa7e3.txt  car1053_png.rf.8de898bf888a2113eb1dc95fce2f8d69.txt  car1084_jpg.rf.616447ebe5e50302112c5c5ba31771ad.txt  car109_jpg.rf.6bee023a0a1575b20d29c9860af98d63.txt  car1109_jpg.rf.a51c8b51dcb339012e7a7142401e4a4b.txt  car1115_jpg.rf.6831ec5691e452ea03358c81719ae37b.txt  car1116_jpg.rf.2f2d87fea2e176bc07d61bfe81c50132.txt  car1121_jpg.rf.5d530a83f9f58b238d6e2c73fe0e6467.txt  car1125_jpg.rf.c0865de0896ef024f274581f59757e7c.txt  car1132_jpg.rf.1edac97855144f8c407516d9d228c109.txt  car1175_jpg.rf.8f240d199d270e1ccd796700794569f6.txt  car1177_jpg.rf.ba5a990ef296e4e3df5e76dec85af0ad.txt  car1178_jpg.rf.5db8c6e65ebfaab00b82d188392bde0b.txt  car12_png.rf.89cd6320fecf0d65ae2b0ded128571b9.txt  (+76 more)
datasets/cars/train/: images.cache
datasets/cars/val/: images.cache
datasets/plates/: data.yaml
detectors/: .env  carsConfig.py  ocrConfig.py  train.py
(+21344 files in other folders)
