[project]
name = "yolo-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi==2025.8.3",
    "easyocr>=1.7.2",
    "imutils>=0.5.4",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.5",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pandas>=2.3.2",
    "pillow==11.3.0",
    "psutil>=7.0.0",
    "python-dotenv==1.1.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch==2.8.0",
    "tqdm>=4.67.1",
]
